--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,7 +33,7 @@
 }
 
 .dark-background {
-  --background-color: #060606;
+  --background-color: #222f3e;
   --default-color: #ffffff;
   --heading-color: #ffffff;
   --surface-color: #252525;
